k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fluentbit-etl
---
apiVersion: v1
kind: Namespace
metadata:
  name: airflow
